--- a/cluster/charts/crossplane/values.yaml.tmpl
+++ b/cluster/charts/crossplane/values.yaml.tmpl
@@ -21,7 +21,7 @@ customAnnotations: {}
 serviceAccount:
   customAnnotations: {}
 
-leaderElection: true
+leaderElection: false
 args: {}
 
 provider:
@@ -62,7 +62,7 @@ securityContextCrossplane:
   runAsUser: 65532
   runAsGroup: 65532
   allowPrivilegeEscalation: false
-  readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: false
 
 packageCache:
   medium: ""
